dashboard updated config

--- a/dashboard-config.json
+++ b/dashboard-config.json
@@ -4,7 +4,7 @@
       "serverURL": "https://remindeio.herokuapp.com",
       "appId": "124345322223",
       "masterKey": "123211234345254563",
-      "appName": "Reminder IO"
+      "appName": "remindeio"
     }
   ]
 }
